--- a/test/.multilevel_sheshrc
+++ b/test/.multilevel_sheshrc
@@ -1,19 +1,19 @@
 # multilevel cd/ls test
 pwd
 ls
-cd dir0
+cd dir
 pwd
 ls
 cd ..
 pwd
 ls
-cd dir0/dir1
+cd dir/subdir
 pwd
 ls
-cd /dir0/dir1/../dir1/dir2_1/../dir2_0
+cd /dir/subdir/../subdir/another/yet_another/../one_more
 pwd
 ls
-cd ../../dir1
+cd ../../../subdir
 pwd
 ls
 
@@ -29,3 +29,4 @@ cd 123
 ls a b c
 tree a b c
 cal a b c
+cal 1 2 3 4
