--- a/test/.multilevel_sheshrc
+++ b/test/.multilevel_sheshrc
@@ -16,9 +16,16 @@ ls
 cd ../../../subdir
 pwd
 ls
+cd /
 
-# tree
-tree
+# head
+head file2.json
+head file2.json 5
+head file2.json 12
+
+# uniq
+cat file3.txt
+uniq file3.txt
 
 # cal
 cal
@@ -27,6 +34,8 @@ cal
 cd a b c
 cd 123
 ls a b c
-tree a b c
 cal a b c
 cal 1 2 3 4
+head -1
+head a b c
+uniq a b c
