--- a/test/.sheshrc
+++ b/test/.sheshrc
@@ -1,7 +1,5 @@
-# execute a dummy command to display args
-show_args "argument one" "arg2" "a r g u m e n t 3"
 # execute a non-existent command
-lol
+non existent command
 # an empty line
 
 # ls in an empty directory
